packages/generator/src/snapshots/typed_cstruct_generator__tests__basic.snap
---
source: packages/generator/src/lib.rs
expression: ts
---
import * as __typ from 'typed-cstruct';
export function A() {
  return new __typ.default()
    .field('a', __typ.i32)
    .field('b', B())
}
export function B() {
  return new __typ.default()
    .field('c', C())
}
export function C() {
  return __typ.i32;
}
