packages/generator/src/snapshots/typed_cstruct_generator__tests__enum_like.snap
---
source: packages/generator/src/lib.rs
expression: ts
---
import * as __typ from 'typed-cstruct';
export function E() {
  return __typ.enumLike({
    B: 1,
    A: 0,
  })
}
