packages/generator/src/snapshots/typed_cstruct_generator__tests__ignore.snap
---
source: packages/generator/src/lib.rs
expression: ts
---
import * as __typ from 'typed-cstruct';
export function B() {
  return new __typ.default()
    .field('c', C())
}
export function C() {
  return __typ.i32;
}
