packages/generator/src/snapshots/typed_cstruct_generator__tests__not_enum.snap
---
source: packages/generator/src/lib.rs
expression: ts
---
import * as __typ from 'typed-cstruct';
export function _bindgen_ty_1() {
  return __typ.u32;
}
