packages/generator/src/snapshots/typed_cstruct_generator__tests__pointer.snap
---
source: packages/generator/src/lib.rs
expression: ts
---
import * as __typ from 'typed-cstruct';
export function A() {
  return new __typ.default()
    .field('a', __typ.ptr(__typ.i32))
}
